docs-archive/apache-airflow-providers-google/22.6.0/_sources/_api/airflow/providers/google/cloud/triggers/pubsub/index.rst.txt
airflow.providers.google.cloud.triggers.pubsub
==============================================

.. py:module:: airflow.providers.google.cloud.triggers.pubsub

.. autoapi-nested-parse::

   This module contains Google Cloud Pubsub triggers.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.triggers.pubsub.PubsubPullTrigger


Module Contents
---------------

.. py:class:: PubsubPullTrigger(project_id, subscription, max_messages, ack_messages, gcp_conn_id, poke_interval = 10.0, impersonation_chain = None, return_immediately = None)

   Bases: :py:obj:`airflow.triggers.base.BaseEventTrigger`


   Initialize the Pubsub Pull Trigger with needed parameters.

   :param project_id: the Google Cloud project ID for the subscription (templated)
   :param subscription: the Pub/Sub subscription name. Do not include the full subscription path.
   :param max_messages: The maximum number of messages to retrieve per
       PubSub pull request
   :param ack_messages: If True, each message will be acknowledged
       immediately rather than by any downstream tasks
   :param gcp_conn_id: Reference to google cloud connection id
   :param poke_interval: polling period in seconds to check for the status
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param return_immediately: Normally supplied by the sensor or operator that defers to this
       trigger; callers constructing the trigger directly (for example via
       :class:`~airflow.providers.common.messaging.triggers.msg_queue.MessageQueueTrigger`) can
       set it themselves. Defaults to True, which uses the deprecated Pub/Sub
       ``returnImmediately`` Pull option and can return zero messages even if there are messages
       in the backlog. If set to False, the system will instead wait (for a bounded amount of
       time) until at least one message is available, rather than returning no messages. The
       default will change to False in the first Google provider major release after
       March 31, 2027.


   .. py:attribute:: project_id


   .. py:attribute:: subscription


   .. py:attribute:: max_messages


   .. py:attribute:: ack_messages


   .. py:attribute:: poke_interval
      :value: 10.0



   .. py:attribute:: gcp_conn_id


   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: return_immediately
      :value: None



   .. py:method:: serialize()

      Serialize PubsubPullTrigger arguments and classpath.



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



   .. py:method:: message_acknowledgement(pulled_messages)
      :async:



   .. py:property:: hook
      :type: airflow.providers.google.cloud.hooks.pubsub.PubSubAsyncHook



